--- a/web/src/wavelet.html
+++ b/web/src/wavelet.html
@@ -208,7 +208,7 @@ title: Smile - Wavelet
         <div class="tab-pane active" id="java_3">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    jshell&gt; haar.inverse(sp500)
+    smile&gt; haar.inverse(sp500)
           </code></pre>
             </div>
         </div>
