--- a/web/src/graph.html
+++ b/web/src/graph.html
@@ -56,7 +56,7 @@ title: Smile - Graph Data Structure
         <div class="tab-pane active" id="java_2">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    import smile.graph.*
+    import smile.graph.*;
 
     var graph = new AdjacencyList(8);
     graph.addEdge(0, 2);
